# AI-FEFU

./: .gitignore
dz-dataset/: Cargo.toml  diesel.toml
dz-dataset/src/: schema.rs
lab1-dirtyplates/: lab1.livemd  results.csv
lab2-dataset/: Cargo.toml  Makefile.toml
lab2-dataset/migrations/2024-10-12-030032_create_poems/: down.sql  up.sql
lab2-dataset/src/: main.rs  models.rs
lab3-tokenization/: Cargo.toml  custom.tokens  lemmas.csv
lab3-tokenization/src/: lemmatization.rs  main.rs  models.rs
lab4-word2vec/: Dockerfile  README.md  docker-compose.yml  lab4.livemd
lab5-timeseries/: Dockerfile  README.md  docker-compose.yml  requirements.txt
lab5-timeseries/src/: extra.py  main.py
project/: .gitignore  pyrightconfig.json
project/trainer/: train.py
project/trainer/notebook/: main.ipynb  main.ju.py
project/xiangqi/: utils.py
project_/: .gitignore  README.md
project_/rs-chinese-chess/lib/engine/src/: board.rs
project_/rs-chinese-chess/src/: ui.rs
project_/xiangqi/: xiangqi.py
