[package]
name = "lab2-dataset"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.4", features = ["postgres"] }
dotenvy = "0.15.7"
env_logger = "0.11.5"
glob = "0.3.1"
itertools = "0.13.0"
kaggle = "1.0.3"
log = "0.4.22"
regex = "1.11.0"
tokio = { version = "0.2.25", features = ["rt-threaded", "macros"] }
