[package]
name = "lab3-tokenization"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
diesel = { version = "2.2.4", features = ["postgres"] }
dotenvy = "0.15.7"
env_logger = "0.11.5"
itertools = "0.13.0"
log = "0.4.22"
polars = { version = "0.43.1", features = ["serde"] }
rayon = "1.10.0"
regex = "1.11.0"
rust_lemmatizer = "0.3.0"
serde_json = "1.0.132"
tokenizers = { version = "0.20.1", features = ["http"] }
tokio = { version = "0.2.25", features = ["rt-threaded", "macros"] }
